added nginx conf template for php

--- a/nginx/server-block-php-conf-template.conf
+++ b/nginx/server-block-php-conf-template.conf
@@ -2,12 +2,12 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name pos.theme29.com;
+    server_name your_dpmain_name;
 
-    access_log /var/log/nginx/pos.theme29.com.access.log;
+    access_log /var/log/nginx/your_dpmain_name.access.log;
 
 
-    root /var/www/pos;
+    root /var/www/your_dpmain_name;
    
 
 	index index.html index.htm index.php;
